[package]
name = "philologus-gtk-rs"
version = "0.1.0"
authors = ["Jeremy March <jmarch@gradcenter.cuny.edu>"]
edition = "2021"

[dependencies]
gtk = { version = "0.14", package = "gtk" }
webkit2gtk = "0.15.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = { version="0", features=["executor"] }
